[gd_scene load_steps=9 format=3 uid="uid://c385sp4m4irnl"]

[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_07d77"]
[ext_resource type="PackedScene" uid="uid://bxfjfw0wc08q7" path="res://player.tscn" id="1_7jlwg"]
[ext_resource type="PackedScene" uid="uid://bgn6opoxq5ypp" path="res://scenes/pause_menu/pause_menu.tscn" id="3_dkmp2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_unc3u"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_hebi2"]
size = Vector3(60, 2, 60)

[sub_resource type="CylinderMesh" id="CylinderMesh_5r2rt"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xcli0"]
albedo_color = Color(1, 0.117647, 1, 1)

[sub_resource type="Curve3D" id="Curve3D_kfyow"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -15.8507, 1.15002, 25.6443, 0, 0, 0, 0, 0, 0, -13.6135, 1.15002, -23.5748, 0, 0, 0, 0, 0, 0, 16.4487, 1.15002, -23.6629, 0, 0, 0, 0, 0, 0, 15.8458, 1.15002, 25.9772, 0, 0, 0, 0, 0, 0, -15.8507, 1.15002, 25.6443),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_07d77")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_unc3u")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_hebi2")

[node name="Player" parent="." instance=ExtResource("1_7jlwg")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.945723, -0.206814, -0.250671, 0.324974, 0.601859, 0.729491, 0, -0.771358, 0.636401, 0, 12.4344, 0)
shadow_enabled = true
shadow_blur = 0.2

[node name="Cylinders" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.1259, 0.177855, -23.7885)
mesh = SubResource("CylinderMesh_5r2rt")
surface_material_override/0 = SubResource("StandardMaterial3D_xcli0")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.8279, 0, -23.7907)
mesh = SubResource("CylinderMesh_5r2rt")
surface_material_override/0 = SubResource("StandardMaterial3D_xcli0")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.9469, 0.177855, 26.1043)
mesh = SubResource("CylinderMesh_5r2rt")
surface_material_override/0 = SubResource("StandardMaterial3D_xcli0")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.8862, 0, 25.8336)
mesh = SubResource("CylinderMesh_5r2rt")
surface_material_override/0 = SubResource("StandardMaterial3D_xcli0")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_kfyow")

[node name="Spawnlocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(0.998948, 0, -0.0454061, 0, 1, 0, 0.0454061, 0, 0.998948, -15.8507, 1.15002, 25.6443)
rotation_mode = 1

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="PauseMenu" parent="." instance=ExtResource("3_dkmp2")]
visible = false

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 30)
projection = 1
current = true
size = 30.0
far = 500.0

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
